--- a/pages/faq.html
+++ b/pages/faq.html
@@ -57,40 +57,106 @@
                 <span class="line"></span>
             </div>
 
-            <h5>What is Fantasy Cricket?</h5>
-            <p>Get acquainted with the concept of Fantasy Cricket, a virtual game where participants create their
-                dream team of real cricket players from different teams. Points are awarded based on the players'
-                performance in actual matches, offering an immersive and engaging experience.</p>
+            <h5>What is CricBrawl?</h5>
+            <p>CricBrawl is a fantasy cricket platform where users can create their own virtual cricket teams by
+                selecting real players from upcoming matches. Points are earned based on the actual performance of these
+                players in live
+                matches. It's a skill-based game where strategic thinking and cricket knowledge are key.</p>
+
+            <h5>How do I participate in a fantasy cricket contest on CricBrawl?</h5>
+            <ul class="list-spacing">
+                <li>Sign Up/Login: Create an account or log in if you already have one.</li>
+
+                <li>Select a Match: Choose an upcoming cricket match from the available options.</li>
+
+                <li>Create Your Team: Use your cricket expertise to select a team of 11 players within a specified
+                    budget.</li>
+
+                <li>Join Contests: Enter your team into various contests for a chance to win prizes.</li>
+
+                <li>Track Performance: Monitor your team's performance live as the match progresses.</li>
+            </ul>
+
+            <h5>How do I deposit and withdraw funds?</h5>
+            <p>To deposit funds, navigate to the "Wallet" section, select the deposit option, and choose your preferred
+                payment method.
+                To withdraw winnings, go to the "Wallet" section, choose the withdraw option, and follow the prompts to
+                transfer funds
+                to your bank account or preferred payment method. Verification may be required for security purposes.
+            </p>
+
+            <h5>How are points calculated in CricBrawl?</h5>
+            <p>Points are awarded based on the real-life performance of the selected players in the match. Key actions
+                such as runs
+                scored, wickets taken, catches, and other significant contributions earn points according to CricBrawl's
+                scoring system.
+                To learn more about it, refer to <a href="fantasy-points.html">Fantasy Points</a> calculation page.</p>
+
+            <h5>Can I change my team after creating it?</h5>
+            <p>Yes, you can make changes to your team until the match deadline. This includes substituting players,
+                changing the
+                captain or vice-captain, and adjusting the team composition based on the latest information and
+                strategies.</p>
 
 
-            <h5>Is CricBrawl Legal in US and Canada?</h5>
-            <p>Learn about the legal aspects of CricBrawl in the US and Canada, ensuring clarity on the regulations
-                governing recreational cricket played in local neighborhoods and communities.</p>
+            <h5>What is the minimum required entrants for a contest to run?</h5>
+            <p>Every public contest on CricBrawl has a minimum required number of entrants. Once this threshold is met,
+                the contest is
+                guaranteed to run, and the prize pool will dynamically adjust based on the total number of participants.
+            </p>
 
 
-            <h5>Is It Secure? Is My Wallet and Data Safe?</h5>
-            <p>Discover our commitment to security and data privacy, ensuring the safety of your wallet and personal
-                information. Our platform employs robust encryption protocols and stringent security measures to
-                safeguard your data against unauthorized access and cyber threats.</p>
+            <h5>Is CricBrawl legal and safe?</h5>
+            <p>Yes, CricBrawl is a legal platform where skill-based fantasy cricket is played. It is compliant with
+                relevant laws and
+                ensures a secure and fair gaming environment. User verification and secure payment methods are in place
+                to protect
+                users.</p>
+
+            <h5>What is responsible gaming on CricBrawl?</h5>
+            <p>CricBrawl promotes responsible gaming by encouraging users to play within their means and providing tools
+                to manage
+                their gaming habits. Users can set deposit limits and self-exclude if necessary. Support for responsible
+                gaming
+                practices is available on the platform.</p>
+
+            <h5>How can I ensure fair play on CricBrawl?</h5>
+            <p>CricBrawl is committed to providing a fair playing environment. Users must be 18+, have only one account,
+                and verify
+                their identity for secure transactions. The use of bots or automated tools is strictly prohibited, and
+                collusion between
+                users is not allowed. Any violations can be reported to the support team for investigation.</p>
 
 
-            <h5>How Are Fantasy Points Counted?</h5>
-            <p>Gain insight into the scoring system used in Fantasy Cricket, understanding how points are calculated
-                based on players' performances such as runs scored, wickets taken, catches, and more. Stay informed
-                to
-                strategize effectively and maximize your team's performance.</p>
+            <h5>What are the different player experience levels?</h5>
+            CricBrawl assigns experience badges to players based on their participation:
+            <ul class="list-spacing">
+                <li>Beginner Level: Less than 50 contests entered.</li>
 
+                <li>Intermediate Level: 50 or more contests entered but not meeting the criteria for Highly-Experienced.
+                </li>
+
+                <li>Highly-Experienced Level: More than 1,000 contests entered or multiple high-value prizes won.</li>
+
+            </ul>
 
             <h5>Is There Tax Implication If I Win?</h5>
-            <p>Explore the tax implications associated with winning in Fantasy Cricket contests, providing clarity
-                on any potential tax obligations based on your jurisdiction and the amount of your winnings.</p>
+            <p>Any winnings of $600 or more in a calendar year are subject to federal tax reporting. CricBrawl will
+                issue a Form 1099
+                to you and the IRS if your total winnings exceed this amount. You are responsible for reporting your
+                winnings on your
+                federal income tax return, regardless of whether you receive a Form 1099.</p>
 
             <h5>What States Are Allowed?</h5>
-            <p>Check the eligibility criteria regarding participating states, ensuring compliance with applicable
-                regulations and restrictions. Get clarity on which states permit Fantasy Cricket participation and
-                access our platform for an unparalleled gaming experience.</p>
-
-
+            <p>CricBrawl is committed to adhering to all state regulations regarding fantasy sports. As such, the
+                availability of our
+                services varies depending on state laws. Currently, CricBrawl is available in the following states:
+                <b><i>California, Florida, Georgia, Illinois, Kentucky, Minnesota, Nebraska, New Mexico, North Carolina,
+                        North
+                        Dakota,
+                        Oklahoma, Oregon, Rhode Island, South Carolina, South Dakota, Texas, Utah, Wisconsin. </i></b>
+            </p>
+            <i>If you have any other questions or need further assistance, feel free to contact our support team.</i>
         </div>
     </section>
 
