--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
                 be part of the
                 premier fantasy cricket community in the USA.</p>
               <ul>
-                <li><a><img height="40px" src="images/appstore.svg" class="wow fadeInUp" data-wow-delay="0.4s" /></a>
+                <li><a href="https://apps.apple.com/us/app/cricbrawl/id6499083448"><img height="40px"
+                      src="images/appstore.svg" class="wow fadeInUp" data-wow-delay="0.4s" /></a>
                 </li>
-                <li><a><img src="images/playstore.svg" class="wow fadeInUp" data-wow-delay="0.7s" /></a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.cricbrawl.app.app"><img
+                      src="images/playstore.svg" class="wow fadeInUp" data-wow-delay="0.7s" /></a></li>
               </ul>
             </div>
           </div>
@@ -417,8 +419,7 @@
             <span class="line"></span>
             <p>CricBrawl is revolutionizing the world of fantasy cricket, and we invite you to join us on this thrilling
               journey. Enter
-              your name and email to become a part of our exciting community. Stay updated as we prepare to launch our
-              first version.
+              your name and email to become a part of our exciting community.
             </p>
           </div>
           <div class="section-content">
@@ -490,9 +491,10 @@
         <div class="col-md-12">
           <div class="section-content text-center">
             <ul>
-              <li><a href="#"><img height="40px" src="images/appstore.svg" class="wow fadeInUp"
-                    data-wow-delay="0.4s" /></a></li>
-              <li><a href="#"><img src="images/playstore.svg" class="wow fadeInUp" data-wow-delay="0.7s" /></a></li>
+              <li><a href="https://apps.apple.com/us/app/cricbrawl/id6499083448"><img height="40px"
+                    src="images/appstore.svg" class="wow fadeInUp" data-wow-delay="0.4s" /></a></li>
+              <li><a href="https://play.google.com/store/apps/details?id=com.cricbrawl.app.app"><img
+                    src="images/playstore.svg" class="wow fadeInUp" data-wow-delay="0.7s" /></a></li>
             </ul>
           </div>
         </div>
