--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
           <div class="sectioner-header text-center white">
             <h3>Download Our App</h3>
             <span class="line"></span>
-            <p class="white">Our app will be available in June! Get ready to enhance your cricket experience. Stay tuned
-              for the launch updates!</p>
+            <p class="white">Our app is now live! Enhance your cricket experience today. Download now and start playing!
+            </p>
           </div>
         </div>
         <div class="col-md-12">
